# B3_Transformer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_vis_single_q.sh
src/gsm8k_llama2_analysis/: __init__.py  calc_avg_token_cost.py  pick_question.py  run_analysis.py  run_gsm8k_acc.py  vis_logitlens.py
